Fix white space wrap issue

--- a/src/sass/_ScoreBoard.scss
+++ b/src/sass/_ScoreBoard.scss
@@ -98,45 +98,5 @@
 }
 
 .fl-fr_ScoreBoard-body-reviewCountStarScore-stars {
-
-}
-
-.fl-fr_ScoreBoard-body-reviewCountStarScore-reviews {
-
-}
-
-.fl-fr_ScoreBoard-body-reviewCountStarScore {
-
-}
-
-.fl-fr_ScoreBoard-body-reviewCountStarScore-stars {
-
-}
-
-.fl-fr_ScoreBoard-body-reviewCountStarScore-reviews {
-
-}
-
-.fl-fr_ScoreBoard-body-reviewCountStarScore {
-
-}
-
-.fl-fr_ScoreBoard-body-reviewCountStarScore-stars {
-
-}
-
-.fl-fr_ScoreBoard-body-reviewCountStarScore-reviews {
-
-}
-
-.fl-fr_ScoreBoard-body-reviewCountStarScore {
-
-}
-
-.fl-fr_ScoreBoard-body-reviewCountStarScore-stars {
-
-}
-
-.fl-fr_ScoreBoard-body-reviewCountStarScore-reviews {
-
+  white-space: nowrap;
 }
